Kubernetes/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kiiiproject-db
  namespace: kiiiproject-namespace
spec:
  serviceName: "kiiiproject-db"
  replicas: 1
  selector:
    matchLabels:
      app: kiiiproject-db
  template:
    metadata:
      labels:
        app: kiiiproject-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
