Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiiiproject-app-service
  namespace: kiiiproject-namespace
spec:
  selector:
    app: kiiiproject
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
