Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiiiproject-ingress
  namespace: kiiiproject-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: kiiiproject.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiiiproject-app-service
                port:
                  number: 80
